--- a/resource/GameView.fxml
+++ b/resource/GameView.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ListView?>
@@ -54,107 +54,6 @@
                                     <RowConstraints maxHeight="50.0" minHeight="0.0" percentHeight="1.0" prefHeight="0.0" vgrow="SOMETIMES" />
                                               </rowConstraints>
                                               <children>
-                                                  <HBox alignment="CENTER" minHeight="200.0" minWidth="200.0" prefHeight="200.0" prefWidth="200.0" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="2" GridPane.vgrow="SOMETIMES">
-                                                      <children>
-                                                          <ImageView fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                                                          </ImageView>
-                                                      </children>
-                                                      <padding>
-                                                          <Insets bottom="30.0" />
-                                                      </padding>
-                                       <GridPane.margin>
-                                          <Insets right="50.0" />
-                                       </GridPane.margin>
-                                                  </HBox>
-                                                  <HBox alignment="CENTER" minHeight="200.0" minWidth="200.0" prefHeight="200.0" prefWidth="200.0" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="2" GridPane.vgrow="SOMETIMES">
-                                                      <children>
-                                                          <FlowPane alignment="CENTER" columnHalignment="CENTER" hgap="10.0" prefHeight="200.0" prefWidth="200.0" styleClass="image_24x24" vgap="10.0">
-                                                              <children>
-                                                                  <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                                                                      <cursor>
-                                                                          <Cursor fx:constant="HAND" />
-                                                                      </cursor>
-                                                                      <image>
-                                                                          <Image url="dice/46x46/1y.png" />
-                                                                      </image>
-                                                                  </ImageView>
-                                                                  <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="94.0" layoutY="84.0" pickOnBounds="true" preserveRatio="true">
-                                                                      <cursor>
-                                                                          <Cursor fx:constant="HAND" />
-                                                                      </cursor>
-                                                                      <image>
-                                                                          <Image url="dice/46x46/6g.png" />
-                                                                  </image>
-                                                                  </ImageView>
-                                                                  <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="110.0" layoutY="84.0" pickOnBounds="true" preserveRatio="true">
-                                                                      <cursor>
-                                                                          <Cursor fx:constant="HAND" />
-                                                                      </cursor>
-                                                                      <image>
-                                                                          <Image url="dice/46x46/6g.png" />
-                                                                      </image>
-                                                                  </ImageView>
-                                                                  <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="126.0" layoutY="84.0" pickOnBounds="true" preserveRatio="true">
-                                                                      <cursor>
-                                                                          <Cursor fx:constant="HAND" />
-                                                                      </cursor>
-                                                                      <image>
-                                                                          <Image url="dice/46x46/6g.png" />
-                                                                      </image>
-                                                                  </ImageView>
-                                                                  <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="142.0" layoutY="84.0" pickOnBounds="true" preserveRatio="true">
-                                                                      <cursor>
-                                                                          <Cursor fx:constant="HAND" />
-                                                                      </cursor>
-                                                                      <image>
-                                                                          <Image url="dice/46x46/6g.png" />
-                                                                      </image>
-                                                                  </ImageView>
-                                                                  <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="158.0" layoutY="84.0" pickOnBounds="true" preserveRatio="true">
-                                                                      <cursor>
-                                                                          <Cursor fx:constant="HAND" />
-                                                                      </cursor>
-                                                                      <image>
-                                                                          <Image url="dice/46x46/6g.png" />
-                                                                      </image>
-                                                                  </ImageView>
-                                                                  <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="94.0" layoutY="100.0" pickOnBounds="true" preserveRatio="true">
-                                                                      <cursor>
-                                                                          <Cursor fx:constant="HAND" />
-                                                                      </cursor>
-                                                                      <image>
-                                                                          <Image url="dice/46x46/6g.png" />
-                                                                      </image>
-                                                                  </ImageView>
-                                                                  <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="110.0" layoutY="100.0" pickOnBounds="true" preserveRatio="true">
-                                                                      <cursor>
-                                                                          <Cursor fx:constant="HAND" />
-                                                                      </cursor>
-                                                                      <image>
-                                                                          <Image url="dice/46x46/6g.png" />
-                                                                      </image>
-                                                                  </ImageView>
-                                                                  <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="126.0" layoutY="100.0" pickOnBounds="true" preserveRatio="true">
-                                                                      <cursor>
-                                                                          <Cursor fx:constant="HAND" />
-                                                                      </cursor>
-                                                                      <image>
-                                                                          <Image url="dice/46x46/6g.png" />
-                                                                      </image>
-                                                                  </ImageView>
-                                                              </children>
-                                                              <padding>
-                                                                  <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
-                                                              </padding>
-                                                              <HBox.margin>
-                                                                  <Insets />
-                                                              </HBox.margin>
-                                                          </FlowPane>
-                                                      </children>
-                                       <GridPane.margin>
-                                          <Insets right="50.0" />
-                                       </GridPane.margin>
-                                                  </HBox>
                                                   <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.rowIndex="1" GridPane.rowSpan="2">
                                                       <children>
                                                           <GridPane fx:id="roundTrackDiceTable" minHeight="60.0" minWidth="320.0" prefHeight="120.0" prefWidth="320.0" HBox.hgrow="SOMETIMES">
@@ -254,34 +153,31 @@
                                                           </VBox>
                                                       </children>
                                                   </HBox>
+                                                  <HBox fx:id="draftPoolParent" alignment="CENTER" minHeight="200.0" minWidth="200.0" prefHeight="200.0" prefWidth="200.0" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="2" GridPane.vgrow="SOMETIMES">
+                                       <GridPane.margin>
+                                          <Insets right="50.0" />
+                                       </GridPane.margin>
+                                                  </HBox>
                                                   <VBox minHeight="240.0" minWidth="340.0" prefHeight="260.0" prefWidth="340.0" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="3" GridPane.vgrow="SOMETIMES">
                                                       <children>
                                                           <HBox alignment="BASELINE_LEFT" minHeight="48.0" minWidth="240.0" prefHeight="48.0" prefWidth="340.0" spacing="20.0">
-                                                              <children>
-                                                                  <ImageView fitHeight="42.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="SOMETIMES">
-                                                                      <image>
-                                                                          <Image url="@../../resource/icons/《潮爆三国》UI资源/物品技能图标/event_11.jpg" />
-                                                                      </image>
-                                                                  </ImageView>
-                                                                  <ImageView fitHeight="42.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
-                                                                      <image>
-                                                                          <Image url="@../../resource/icons/《潮爆三国》UI资源/物品技能图标/item_100203.jpg" />
-                                                                      </image>
-                                                                  </ImageView>
-                                                                  <ImageView fitHeight="42.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true">
-                                                                      <image>
-                                                                          <Image url="@../../resource/icons/《潮爆三国》UI资源/物品技能图标/event_21.jpg" />
-                                                                      </image>
-                                                                  </ImageView>
-                                                              </children>
                                                               <padding>
                                                                   <Insets bottom="6.0" left="20.0" />
                                                               </padding>
                                                               <VBox.margin>
                                                                   <Insets />
                                                               </VBox.margin>
+                                             <children>
+                                                <ButtonBar prefHeight="40.0" prefWidth="200.0">
+                                                  <buttons>
+                                                    <Button mnemonicParsing="false" text="Button" />
+                                                      <Button layoutX="132.0" layoutY="11.0" mnemonicParsing="false" text="Button" />
+                                                      <Button layoutX="44.0" layoutY="11.0" mnemonicParsing="false" text="Button" />
+                                                  </buttons>
+                                                </ButtonBar>
+                                             </children>
                                                           </HBox>
-                                                          <HBox fx:id="playerPane" minHeight="200.0" minWidth="240.0" prefHeight="200.0" prefWidth="340.0" style="-fx-border-color: #FFFFFF;" VBox.vgrow="SOMETIMES">
+                                                          <HBox fx:id="playerPane" minHeight="200.0" minWidth="240.0" prefHeight="200.0" prefWidth="340.0" VBox.vgrow="SOMETIMES">
                                                               <children>
                                                                   <VBox prefHeight="192.0" prefWidth="240.0" HBox.hgrow="SOMETIMES">
                                                                       <children>
