--- a/resource/EnemyPaneView.fxml
+++ b/resource/EnemyPaneView.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox fx:id="pane" prefHeight="160.0" prefWidth="280.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="porprezhas.view.fx.controller.EnemyViewController">
+<HBox fx:id="pane" prefHeight="160.0" prefWidth="280.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="porprezhas.view.fx.gameScene.controller.EnemyViewController">
     <children>
         <Label prefHeight="57.0" prefWidth="57.0" HBox.hgrow="NEVER">
             <graphic>
