--- a/resource/LoginView.fxml
+++ b/resource/LoginView.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -9,7 +15,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="loginView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="330.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="loginView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="330.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fx:id="loginViewImage" blendMode="EXCLUSION" fitHeight="340.0" fitWidth="600.0" layoutY="-4.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -23,8 +29,20 @@
             </SepiaTone>
          </effect>
       </ImageView>
-      <PasswordField fx:id="loginViewPassword" layoutX="229.0" layoutY="158.0" prefHeight="26.0" prefWidth="142.0" promptText="Password" style="-fx-background-color: #E0F4FB;" />
-      <Button fx:id="loginViewButton" cache="true" layoutX="256.0" layoutY="192.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="89.0" style="-fx-border-color: #FFFFFF;" text="Login" />
-      <TextField layoutX="229.0" layoutY="118.0" prefHeight="26.0" prefWidth="142.0" promptText="Username" style="-fx-background-color: #E0F4FB;" />
+      <PasswordField fx:id="loginViewPassword" layoutX="229.0" layoutY="158.0" prefHeight="26.0" prefWidth="142.0" promptText="Password" style="-fx-background-color: #E0F4FB;">
+         <effect>
+            <DropShadow />
+         </effect></PasswordField>
+      <Button fx:id="loginViewButton" cache="true" layoutX="256.0" layoutY="202.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="89.0" style="-fx-background-color: #D8FCF6;" text="Login" textFill="#0b0025">
+         <font>
+            <Font name="Book Antiqua" size="18.0" />
+         </font>
+         <effect>
+            <DropShadow />
+         </effect></Button>
+      <TextField layoutX="229.0" layoutY="118.0" prefHeight="26.0" prefWidth="142.0" promptText="Username" style="-fx-background-color: #E0F4FB;">
+         <effect>
+            <DropShadow />
+         </effect></TextField>
    </children>
 </AnchorPane>
