--- a/resource/LoginView.fxml
+++ b/resource/LoginView.fxml
@@ -17,32 +17,31 @@
 
 <AnchorPane fx:id="loginView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="330.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fx:id="loginViewImage" blendMode="EXCLUSION" fitHeight="340.0" fitWidth="600.0" layoutY="-4.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="loginViewImage" blendMode="SRC_ATOP" fitHeight="340.0" fitWidth="600.0" layoutY="-4.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@background/sagrada%20game%20review%20main.jpg" />
          </image>
          <effect>
-            <SepiaTone level="0.1">
+            <SepiaTone level="0.2">
                <input>
-                  <Glow level="0.11" />
+                  <Glow level="0.06" />
                </input>
             </SepiaTone>
          </effect>
       </ImageView>
-      <PasswordField fx:id="loginViewPassword" layoutX="229.0" layoutY="158.0" prefHeight="26.0" prefWidth="142.0" promptText="Password" style="-fx-background-color: #E0F4FB;">
-         <effect>
-            <DropShadow />
-         </effect></PasswordField>
-      <Button fx:id="loginViewButton" cache="true" layoutX="256.0" layoutY="202.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="89.0" style="-fx-background-color: #D8FCF6;" text="Login" textFill="#0b0025">
+      <Button fx:id="loginViewButton" cache="true" layoutX="256.0" layoutY="202.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="89.0" style="-fx-background-color: #FFF1C6;" text="Login" textFill="#390f01">
          <font>
             <Font name="Book Antiqua" size="18.0" />
          </font>
          <effect>
             <DropShadow />
          </effect></Button>
-      <TextField layoutX="229.0" layoutY="118.0" prefHeight="26.0" prefWidth="142.0" promptText="Username" style="-fx-background-color: #E0F4FB;">
+      <TextField layoutX="230.0" layoutY="152.0" prefHeight="26.0" prefWidth="142.0" promptText="Username" style="-fx-background-color: #FFF7DE;">
          <effect>
             <DropShadow />
-         </effect></TextField>
+         </effect>
+         <font>
+            <Font name="Book Antiqua" size="12.0" />
+         </font></TextField>
    </children>
 </AnchorPane>
