1. Add StageManager to manage multiple Stage-Window. 2. Fix View Controllers. 3. Add ClientView - final client application (file to be .jar). Have a lot to Fix

--- a/resource/ChoosePatternView.fxml
+++ b/resource/ChoosePatternView.fxml
@@ -7,7 +7,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="ChoosePatternView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="508.0" prefWidth="600.0" stylesheets="@ChoosePatternView.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="ChoosePatternView" fx:controller="porprezhas.view.fx.choosePatternScene.ChoosePatternViewController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="508.0" prefWidth="600.0" stylesheets="@ChoosePatternView.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="508.0" fitWidth="600.0" layoutX="-14.0" layoutY="-73.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <image>
@@ -43,7 +43,7 @@
       </Text>
       <StackPane layoutX="70.0" layoutY="72.0" prefHeight="195.0" prefWidth="223.0" styleClass="pattern" stylesheets="@ChoosePatternView.css">
          <children>
-            <Label fx:id="choosePatternViewPatternLabel1" onMouseEntered="#onMouseEnteredPattern" prefHeight="195.0" prefWidth="228.0" />
+            <Label fx:id="choosePatternViewPatternLabel1" onMouseEntered="#onMouseEnteredPattern" onMouseClicked="#onMouseClickedPattern" prefHeight="195.0" prefWidth="228.0" />
             <ImageView fx:id="choosePatternViewPattern1" fitHeight="195.0" fitWidth="250.0" focusTraversable="true" onMouseEntered="#onMouseEnteredPattern" pickOnBounds="true" preserveRatio="true" styleClass="pattern">
                <image>
                   <Image url="@pattern/aurora_sagradis.png" />
@@ -52,7 +52,7 @@
          </children></StackPane>
       <StackPane layoutX="319.0" layoutY="72.0" prefHeight="195.0" prefWidth="223.0" stylesheets="@ChoosePatternView.css">
          <children>
-            <Label fx:id="choosePatternViewPatternLabel2" onMouseEntered="#onMouseEnteredPattern" />
+            <Label fx:id="choosePatternViewPatternLabel2" onMouseEntered="#onMouseEnteredPattern"  onMouseClicked="#onMouseClickedPattern"/>
             <ImageView fx:id="choosePatternViewPattern2" fitHeight="195.0" fitWidth="250.0" focusTraversable="true" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@pattern/aurora_sagradis.png" />
@@ -61,7 +61,7 @@
          </children></StackPane>
       <StackPane layoutX="70.0" layoutY="291.0" prefHeight="195.0" prefWidth="223.0" stylesheets="@ChoosePatternView.css">
          <children>
-            <Label fx:id="choosePatternViewPatternLabel3" onMouseEntered="#onMouseEnteredPattern" />
+            <Label fx:id="choosePatternViewPatternLabel3" onMouseEntered="#onMouseEnteredPattern"  onMouseClicked="#onMouseClickedPattern"/>
             <ImageView fx:id="choosePatternViewPattern3" fitHeight="195.0" fitWidth="250.0" focusTraversable="true" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@pattern/aurora_sagradis.png" />
@@ -70,7 +70,7 @@
          </children></StackPane>
       <StackPane layoutX="319.0" layoutY="291.0" prefHeight="195.0" prefWidth="223.0" stylesheets="@ChoosePatternView.css">
          <children>
-            <Label fx:id="choosePatternViewPatternLabel4" onMouseEntered="#onMouseEnteredPattern">
+            <Label fx:id="choosePatternViewPatternLabel4" onMouseEntered="#onMouseEnteredPattern"  onMouseClicked="#onMouseClickedPattern">
                <graphic>
                   <ImageView fx:id="choosePatternViewPattern4" fitHeight="195.0" fitWidth="250.0" focusTraversable="true" pickOnBounds="true" preserveRatio="true">
                      <image>
