--- a/resource/LoginView.fxml
+++ b/resource/LoginView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
@@ -8,7 +9,9 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -16,9 +19,9 @@
    <children>
       <StackPane fx:id="backgroundPane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <ImageView fx:id="loginViewImage" blendMode="SRC_ATOP" fitHeight="600.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="loginViewImage" blendMode="SRC_ATOP" fitHeight="610.0" fitWidth="610.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@background/SagradaLogin.png" />
+                  <Image url="@background/SagradaLogin.jpg" />
                </image>
                <effect>
                   <SepiaTone level="0.2">
@@ -28,50 +31,79 @@
                   </SepiaTone>
                </effect>
             </ImageView>
+            <VBox fx:id="loginScene" alignment="CENTER" fillWidth="false" spacing="10.0">
+               <children>
+                  <TextField fx:id="userNameTextField" prefHeight="26.0" prefWidth="142.0" promptText="Username" style="-fx-background-color: #FFF7DE;">
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                     <font>
+                        <Font name="Book Antiqua" size="12.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets bottom="5.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Button fx:id="loginViewButton" cache="true" mnemonicParsing="false" onAction="#loginDone" prefHeight="39.0" prefWidth="89.0" style="-fx-background-color: #FFF1C6;" text="Login" textFill="#390f01">
+                     <font>
+                        <Font name="Book Antiqua" size="18.0" />
+                     </font>
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                     <VBox.margin>
+                        <Insets top="5.0" />
+                     </VBox.margin>
+                  </Button>
+                  <HBox alignment="CENTER" fillHeight="false" spacing="25.0">
+                     <children>
+                        <Button fx:id="loginViewRMIButton" cache="true" mnemonicParsing="false" onAction="#connectionMethodChooseRMI" prefHeight="26.0" prefWidth="70.0" style="-fx-background-color: #FFF1C6;" text="RMI" textFill="#390f01">
+                           <effect>
+                              <DropShadow />
+                           </effect>
+                           <font>
+                              <Font name="Book Antiqua" size="12.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="loginViewSocketButton" cache="true" mnemonicParsing="false" onAction="#connectionMethodChooseSocket" prefHeight="26.0" prefWidth="70.0" style="-fx-background-color: #FFF1C6;" text="Socket" textFill="#390f01">
+                           <effect>
+                              <DropShadow />
+                           </effect>
+                           <font>
+                              <Font name="Book Antiqua" size="12.0" />
+                           </font>
+                        </Button>
+                     </children>
+                     <padding>
+                        <Insets top="20.0" />
+                     </padding>
+                  </HBox>
+               </children>
+               <padding>
+                  <Insets top="100.0" />
+               </padding>
+            </VBox>
+            <AnchorPane fx:id="joinScene" prefHeight="200.0" prefWidth="200.0">
+               <children>
+                  <Button fx:id="joinViewButton" layoutX="256.0" layoutY="280.0" mnemonicParsing="false" onAction="#onJoinButton" prefHeight="13.0" prefWidth="89.0" style="-fx-background-color: #FFF1C6;" text="Join" textFill="#390f01">
+                     <font>
+                        <Font name="Book Antiqua" size="20.0" />
+                     </font>
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                  </Button>
+               </children>
+            </AnchorPane>
+            <Text fx:id="warningText" disable="true" fill="#ff2e2e" opacity="0.0" smooth="false" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-stroke: #CCBDA6; -fx-stroke-width: 2;" text="TEXT" textAlignment="JUSTIFY">
+               <font>
+                  <Font size="32.0" />
+               </font>
+               <StackPane.margin>
+                  <Insets />
+               </StackPane.margin>
+            </Text>
          </children>
       </StackPane>
-      <Button fx:id="loginViewButton" cache="true" layoutX="250.0" layoutY="206.0" mnemonicParsing="false" onAction="#loginDone" prefHeight="39.0" prefWidth="89.0" style="-fx-background-color: #FFF1C6;" text="Login" textFill="#390f01">
-         <font>
-            <Font name="Book Antiqua" size="18.0" />
-         </font>
-         <effect>
-            <DropShadow />
-         </effect></Button>
-      <TextField fx:id="textFieldLoginView" layoutX="224.0" layoutY="139.0" prefHeight="26.0" prefWidth="142.0" promptText="Username" style="-fx-background-color: #FFF7DE;">
-         <effect>
-            <DropShadow />
-         </effect>
-         <font>
-            <Font name="Book Antiqua" size="12.0" />
-         </font></TextField>
-      <Button fx:id="joinViewButton" layoutX="256.0" layoutY="165.0" mnemonicParsing="false" onAction="#onJoinButton" prefHeight="13.0" prefWidth="89.0" style="-fx-background-color: #FFF1C6;" text="Join" textFill="#390f01" visible="false" AnchorPane.bottomAnchor="125.0" AnchorPane.leftAnchor="256.0" AnchorPane.rightAnchor="255.0">
-         <font>
-            <Font name="Book Antiqua" size="20.0" />
-         </font>
-         <effect>
-            <DropShadow />
-         </effect>
-      </Button>
-      <Button fx:id="loginViewRMIButton" cache="true" layoutX="221.0" layoutY="260.0" mnemonicParsing="false" onAction="#connectionMethodChooseRMI" prefHeight="26.0" prefWidth="70.0" style="-fx-background-color: #FFF1C6;" text="RMI" textFill="#390f01">
-         <effect>
-            <DropShadow />
-         </effect>
-         <font>
-            <Font name="Book Antiqua" size="12.0" />
-         </font>
-      </Button>
-      <Button fx:id="loginViewSocketButton" cache="true" layoutX="303.0" layoutY="260.0" mnemonicParsing="false" onAction="#connectionMethodChooseSocket" prefHeight="26.0" prefWidth="70.0" style="-fx-background-color: #FFF1C6;" text="Socket" textFill="#390f01">
-         <effect>
-            <DropShadow />
-         </effect>
-         <font>
-            <Font name="Book Antiqua" size="12.0" />
-         </font>
-      </Button>
-      <Text fx:id="loginViewText" fill="#ff2e2e" layoutX="121.0" layoutY="198.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-stroke: #CCBDA6; -fx-stroke-width: 2;">
-         <font>
-            <Font size="32.0" />
-         </font>
-      </Text>
    </children>
 </AnchorPane>
